Fix dropdown scrollbar style

--- a/src/components/dropdown/style.styl
+++ b/src/components/dropdown/style.styl
@@ -13,6 +13,7 @@
         display: none
 
     div[class=dropdown-menu]
+        scrollable()
         border: 0
         border-radius: 0 0 5px 5px
         box-shadow: none
@@ -24,8 +25,8 @@
         margin: 0
         max-height: 215px
         opacity: 0
-        overflow-x: hidden
-        overflow-y: auto
+        //overflow-x: hidden
+        //overflow-y: auto
         padding: 2px 0 0 0
         position: absolute
         top: 0
